# Rust-Polkadot-NFT_Parachain

./: pNFT.json  para-2000-genesis  para-2000-wasm  rococo-1-raw.json  rococo-5-raw.json
node/src/: chain_spec.rs
pallets/nft/: Cargo.toml
pallets/nft/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
