[package]
edition = '2018'
name = 'porta-nft'
authors = ['Anonymous']
description = 'A Substrate FRAME implementation for NFTs.'
version = '3.0.0'
license = 'Unlicense'
homepage = 'https://porta.network/'
repository = 'https://github.com/porta-network'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
# external dependencies
codec = { package = 'parity-scale-codec', version = '2.0.0', features = ['derive'], default-features = false }

# primitive dependencies
sp-std = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.9', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.9', default-features = false }
node-primitives = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.9', default-features = false }

# substrate dependencies
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.9', default-features = false, optional = true }
frame-support = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.9', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.9', default-features = false }

[dev-dependencies]
serde = { version = "1.0.119" }
sp-core = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.9', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.9', default-features = false }

[features]
default = ['std']
runtime-benchmarks = ['frame-benchmarking']
std = [
	'codec/std',
	"sp-std/std",
	"node-primitives/std",
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
]
